Certification page update

--- a/30-experience.html
+++ b/30-experience.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>David Pasek - Experience and Certifications</title>
-    <meta name="description" content="David Pasek Personal page">
+    <meta name="twitter:card" content="">
+    <meta name="description" content="David Pasek professional profile.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
@@ -22,9 +23,9 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">David Pasek</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#">David Pasek</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="20-about-me.html">About ME</a></li>
                     <li class="nav-item"><a class="nav-link active" href="30-experience.html">Experience</a></li>
@@ -52,8 +53,11 @@
                         <div>
                             <h4 class="text-center text-white bg-secondary sub-header">Certifications</h4>
                             <p class="p-longer-text">Personally, I believe that theoretical knowledge and practical experience are more important than product certifications, however, since I have been involved in VMware virtualization technologies for over 15 years, I have invested my time in the VMware certifications below.</p>
-                            <p class="p-longer-text">I achieved VCDX certification for vSphere 5 in June 2015 and in 2018 I re-certified to vSphere 6.5.</p>
+                            <p class="p-longer-text">I achieved the highest VMware technical certification (VCDX - VMware Certified Design Expert) for vSphere 5 in June 2015.</p>
+                            <p class="p-longer-text">You can find all details about VCDX certification at&nbsp;<a href="https://vcdx.vmware.com/">vcdx.vmware.com</a>&nbsp;where is online directory of all VCDX certified experts across the world.</p>
                             <p class="p-longer-text">My VCDX number is 200.</p>
+                            <p class="p-longer-text">I re-certified VCDX to vSphere 6.5 in 2018 and to vSphere 7 in 2021.&nbsp;</p>
+                            <p class="p-longer-text">You can check and verify all my VMware certifications on-line at&nbsp;<a href="https://www.credly.com/users/david-pasek/badges">CREDLY</a></p>
                         </div>
                     </div>
                     <div class="col">
@@ -66,6 +70,7 @@
                 <div class="row">
                     <div class="col">
                         <hr>
+                        <p class="p-longer-text" style="text-align: center;"><strong>Below are few badges of various VMware certifications and milestones.</strong></p>
                     </div>
                 </div>
                 <div class="row">
