--- a/40-references.html
+++ b/40-references.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>David Pasek - References</title>
-    <meta name="description" content="David Pasek Personal page">
+    <meta name="twitter:card" content="">
+    <meta name="description" content="David Pasek professional profile.">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
@@ -22,9 +23,9 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">David Pasek</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#">David Pasek</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="20-about-me.html">About ME</a></li>
                     <li class="nav-item"><a class="nav-link" href="30-experience.html">Experience</a></li>
@@ -48,7 +49,7 @@
                             <div class="card-body"><img class="d-xl-flex reference-logo" src="assets/img/references/PIB.png">
                                 <h3>PromInvest Bank</h3>
                                 <p class="card-text"><em>"I have worked together with David on virtualization of Bank's&nbsp; IT services on Cisco UCS platform. All this time I have known David as a</em><br><em> real professional with a huge level of dedication to get the job done. I</em><br><em> consider David to be a valuable asset for any company as a person with vision, dedication and great experience in cloud technologies."&nbsp;</em></p><a class="card-link d-xl-flex justify-content-xl-end" href="https://www.linkedin.com/in/klarnar/" target="_blank"><strong>Oleksiy Nagornyy</strong><br></a>
-                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="text-light" href="https://www.slideshare.net/davidpasek/recommendation-letter-pib" target="_blank">Official Reference Letter</a></button>
+                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="link-light" href="https://www.slideshare.net/davidpasek/recommendation-letter-pib" target="_blank">Official Reference Letter</a></button>
                             </div>
                         </div>
                     </div>
@@ -57,7 +58,7 @@
                             <div class="card-body"><img class="reference-logo" src="assets/img/references/O2.png">
                                 <h3>Telefonica O2</h3>
                                 <p class="card-text"><em>„In O2, we can honestly recommend David as the infrastructure consultant to data center infrastructure projects of any scale</em>.<em>“</em><br></p><a class="card-link d-xl-flex justify-content-xl-end" href="https://www.linkedin.com/in/vitsubert/" target="_blank"><strong>Vít Šubrt</strong><br></a>
-                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="text-light" href="https://www.slideshare.net/davidpasek/recognition-letter-to2" target="_blank">Official Reference Letter</a></button>
+                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="link-light" href="https://www.slideshare.net/davidpasek/recognition-letter-to2" target="_blank">Official Reference Letter</a></button>
                             </div>
                         </div>
                     </div>
@@ -66,7 +67,7 @@
                             <div class="card-body"><img class="reference-logo" src="assets/img/references/RFE.png">
                                 <h3>Radio Free Europe / Radio Liberty</h3>
                                 <p class="card-text"><em>„I confirm that David Pašek works with RFE/RL during the project </em><br><em>of server virtualization. I can recommend David as the infrastructure </em><br><em>consultant to any data center project.“</em><br></p><a class="card-link d-xl-flex justify-content-xl-end" href=""><strong>Karel Černohouz</strong><br></a>
-                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="text-light" href="https://www.slideshare.net/davidpasek/recommendation-letter-rferl-radio-free-europeradio-liberty" target="_blank">Official Reference Letter</a></button>
+                                <p></p><button class="btn btn-primary d-xl-flex mx-auto" type="button"><a class="link-light" href="https://www.slideshare.net/davidpasek/recommendation-letter-rferl-radio-free-europeradio-liberty" target="_blank">Official Reference Letter</a></button>
                             </div>
                         </div>
                     </div>
