--- a/30-experience.html
+++ b/30-experience.html
@@ -52,12 +52,12 @@
                     <div class="col">
                         <div>
                             <h4 class="text-center text-white bg-secondary sub-header">Certifications</h4>
-                            <p class="p-longer-text">Personally, I believe that theoretical knowledge and practical experience are more important than product certifications, however, since I have been involved in VMware virtualization technologies for over 15 years, I have invested my time in the VMware certifications below.</p>
-                            <p class="p-longer-text">I achieved the highest VMware technical certification (VCDX - VMware Certified Design Expert) for vSphere 5 in June 2015.</p>
-                            <p class="p-longer-text">You can find all details about VCDX certification at&nbsp;<a href="https://vcdx.vmware.com/">vcdx.vmware.com</a>&nbsp;where is online directory of all VCDX certified experts across the world.</p>
+                            <p class="p-longer-text">Personally, I believe that theoretical knowledge and practical experience are more important than product certifications, however, since I have been involved in VMware virtualization technologies for over 15 years, I have invested my time in the VMware certifications.</p>
+                            <p class="p-longer-text">In June 2015, I achieved the highest VMware technical certification (VCDX - VMware Certified Design Expert) for vSphere 5.</p>
+                            <p class="p-longer-text">In 2018, I re-certified VCDX to vSphere 6.5 and in 2021 to vSphere 7.&nbsp;</p>
                             <p class="p-longer-text">My VCDX number is 200.</p>
-                            <p class="p-longer-text">I re-certified VCDX to vSphere 6.5 in 2018 and to vSphere 7 in 2021.&nbsp;</p>
-                            <p class="p-longer-text">You can check and verify all my VMware certifications on-line at&nbsp;<a href="https://www.credly.com/users/david-pasek/badges">CREDLY</a></p>
+                            <p class="p-longer-text"><em>You can find all details about VCDX certification at&nbsp;</em><a href="https://vcdx.vmware.com/">vcdx.vmware.com</a><em>&nbsp;where is online directory of all VCDX certified experts across the world.</em></p>
+                            <p class="p-longer-text"><em>You can check and verify all my VMware certifications on-line at&nbsp;</em><a href="https://www.credly.com/users/david-pasek/badges">CREDLY</a></p>
                         </div>
                     </div>
                     <div class="col">
