--- a/30-experience.html
+++ b/30-experience.html
@@ -56,8 +56,8 @@
                             <p class="p-longer-text">In June 2015, I achieved the highest VMware technical certification (VCDX - VMware Certified Design Expert) for vSphere 5.</p>
                             <p class="p-longer-text">In 2018, I re-certified VCDX to vSphere 6.5 and in 2021 to vSphere 7.&nbsp;</p>
                             <p class="p-longer-text">My VCDX number is 200.</p>
-                            <p class="p-longer-text"><em>You can find all details about VCDX certification at&nbsp;</em><a href="https://vcdx.vmware.com/">vcdx.vmware.com</a><em>&nbsp;where is online directory of all VCDX certified experts across the world.</em></p>
-                            <p class="p-longer-text"><em>You can check and verify all my VMware certifications on-line at&nbsp;</em><a href="https://www.credly.com/users/david-pasek/badges">CREDLY</a></p>
+                            <p class="p-longer-text"><em>You can find all details about VCDX certification at&nbsp;</em><a href="https://vcdx.vmware.com/" target="_blank">vcdx.vmware.com</a><em>&nbsp;where is online directory of all VCDX certified experts across the world.</em></p>
+                            <p class="p-longer-text"><em>You can check and verify all my VMware certifications on-line at&nbsp;</em><a href="https://www.credly.com/users/david-pasek/badges" target="_blank">CREDLY</a></p>
                         </div>
                     </div>
                     <div class="col">
